force-app/main/default/objects/cogn__Cognism_History__c/cogn__Cognism_History__c.object-meta.xml
<CustomObject>
    <label>Cognism History</label>
    <nameField>
        <label>Cognism History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>