force-app/main/default/objects/cogn__Cognism_History__c/fields/cogn__Contact__c.field-meta.xml
<CustomField>
    <fullName>cogn__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cognism Histories</relationshipLabel>
    <relationshipName>Cognism_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>