force-app/main/default/objects/cogn__Cognism_History__c/fields/cogn__Values__c.field-meta.xml
<CustomField>
    <fullName>cogn__Values__c</fullName>
    <label>Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>